# calendar-agent-demo

./: .env.example  .env.secrets.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml  run.py  test_batch_update.py
calendar_agent/: __init__.py  agent.py  calendar_service.py  calendar_tool.py  config.py  main.py  models.py  response.py  strategy_models.py
docs/: TIMEZONE_HANDLING.md  TODO.md  TOOLS.md  USER_STORIES.md
tests/: conftest.py  test_logfire_config.py
tests/agent/: test_calendar_agent.py
tests/services/: test_calendar_service.py
tests/tools/: test_calendar_tools.py
