[tool.poetry]
name = "calendar-agent"
version = "0.1.0"
description = "A calendar agent demo using pydantic-ai"
authors = ["Haomin <haomin_liu@hotmail.com>"]
readme = "README.md"
packages = [{include = "calendar_agent"}]

[tool.poetry.dependencies]
python = "^3.9"
pydantic-ai = "^0.0.25"
pydantic = ">=2.0"
python-dotenv = "^1.0.1"
loguru = "^0.7.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
