[tool.poetry]
name = "calendar-agent"
version = "0.1.0"
description = "A calendar agent demo using pydantic-ai"
authors = ["Haomin <haomin_liu@hotmail.com>"]
readme = "README.md"
packages = [{include = "calendar_agent"}]

[tool.poetry.dependencies]
python = "^3.9"
pydantic-ai = {extras = ["logfire"], version = "^0.0.25"}
pydantic = ">=2.0"
python-dotenv = "^1.0.1"
loguru = "^0.7.2"
logfire = {extras = ["httpx"], version = "^3.6.2"}
sqlalchemy = "^2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-asyncio = "^0.25.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
